; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonstreamsfile_stream.c_filestream_write_file.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonstreamsfile_stream.c_filestream_write_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RETRO_VFS_FILE_ACCESS_WRITE = common dso_local global i32 0, align 4
@RETRO_VFS_FILE_ACCESS_HINT_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @filestream_write_file(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 0, i64* %8, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* @RETRO_VFS_FILE_ACCESS_WRITE, align 4
  %12 = load i32, i32* @RETRO_VFS_FILE_ACCESS_HINT_NONE, align 4
  %13 = call i32* @filestream_open(i8* %10, i32 %11, i32 %12)
  store i32* %13, i32** %9, align 8
  %14 = load i32*, i32** %9, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %29

17:                                               ; preds = %3
  %18 = load i32*, i32** %9, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = load i64, i64* %7, align 8
  %21 = call i64 @filestream_write(i32* %18, i8* %19, i64 %20)
  store i64 %21, i64* %8, align 8
  %22 = load i32*, i32** %9, align 8
  %23 = call i32 @filestream_close(i32* %22)
  %24 = load i64, i64* %8, align 8
  %25 = load i64, i64* %7, align 8
  %26 = icmp ne i64 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %17
  store i32 0, i32* %4, align 4
  br label %29

28:                                               ; preds = %17
  store i32 1, i32* %4, align 4
  br label %29

29:                                               ; preds = %28, %27, %16
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32* @filestream_open(i8*, i32, i32) #1

declare dso_local i64 @filestream_write(i32*, i8*, i64) #1

declare dso_local i32 @filestream_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
